parser/w7_1.output
Terminals unused in grammar

   NL
   LSQB
   RSQB
   SS
   LOOP
   CHANGE_RING_OPERATOR
   CHANGE_RING_KEYWORD
   FOR
   WHILE
   DO
   RETURN
   TRY
   EXIT
   BYE
   SWITCH
   GT
   LE
   GE


State 63 conflicts: 1 shift/reduce
State 70 conflicts: 1 shift/reduce


Grammar

    0 $accept: stmt $end

    1 stmt: STATEMENT DOLLAR

    2 STATEMENT: PACK
    3          | CLAS
    4          | FNC
    5          | IMPOR
    6          | PRIVAT
    7          | LOD
    8          | LODSYN
    9          | SEE_PUT_EXPR
   10          | GIVE_GET_IDENTIFIER
   11          | IF_STAT
   12          | %empty

   13 PACK: PACKAGE IDENTIFIER DOT IDENTIFIER PACKSELF PACKEN

   14 PACKSELF: LBR STATEMENT RBR
   15         | %empty

   16 PACKEN: END
   17       | ENDPACKAGE

   18 CLAS: CLASS IDENTIFIER CLASMIDLE IDENTIFIER CLASSELF CLASEN

   19 CLASMIDLE: FROM
   20          | COLON
   21          | LT
   22          | %empty

   23 CLASEN: END
   24       | ENDCLASS
   25       | %empty

   26 CLASSELF: LBR STATEMENT RBR
   27         | %empty

   28 FNC: FNCSTA IDENTIFIER PARALIST FNCSELF FNCEN

   29 FNCSTA: FUNC
   30       | DEF

   31 PARALIST: LR IDENTIFIER COMMA IDENTIFIER RR
   32         | %empty

   33 FNCSELF: LBR STATEMENT RBR
   34        | %empty

   35 FNCEN: END
   36      | ENDFUNC
   37      | %empty

   38 IMPOR: IMPORT IDENTIFIER DOT IDENTIFIER

   39 PRIVAT: PRIVATE

   40 LOD: LOAD PACKAGE LITERAL STATEMENT

   41 LODSYN: LOADSYNTAX LITERAL STATEMENT

   42 SEE_PUT_EXPR: SEE_PUT EXPR

   43 SEE_PUT: SEE
   44        | PUT

   45 EXPR: LOGICNOT AND_OR LOGICNOT

   46 AND_OR: AND
   47       | OR

   48 GIVE_GET_IDENTIFIER: GIVE_GET IDENTIFIER

   49 GIVE_GET: GIVE
   50         | GET

   51 IF_STAT: IF EXPR LBR STATEMENT IF_MIDLE EXPR STATEMENT ELSE STATEMENT IF_EN

   52 IF_MIDLE: BUT
   53         | ELSEIF

   54 IF_EN: OK
   55      | END
   56      | RBR


Terminals, with rules where they appear

$end (0) 0
error (256)
DOLLAR (258) 1
NL (259)
LBR (260) 14 26 33 51
RBR (261) 14 26 33 56
LSQB (262)
RSQB (263)
LR (264) 31
RR (265) 31
COMMA (266) 31
COLON (267) 20
SS (268)
DOT (269) 13 38
IDENTIFIER (270) 13 18 28 31 38 48
PACKAGE (271) 13 40
PRIVATE (272) 39
ENDPACKAGE (273) 17
END (274) 16 23 35 55
LOOP (275)
CHANGE_RING_OPERATOR (276)
CHANGE_RING_KEYWORD (277)
IF (278) 51
GET (279) 50
GIVE (280) 49
LOAD (281) 40
LOADSYNTAX (282) 41
FOR (283)
WHILE (284)
DO (285)
RETURN (286)
TRY (287)
IMPORT (288) 38
EXIT (289)
BYE (290)
DEF (291) 30
ENDFUNC (292) 36
FUNC (293) 29
SWITCH (294)
CLASS (295) 18
ENDCLASS (296) 24
FROM (297) 19
SEE (298) 43
PUT (299) 44
BUT (300) 52
ELSE (301) 51
ELSEIF (302) 53
OK (303) 54
LITERAL (304) 40 41
LT (305) 21
GT (306)
LE (307)
GE (308)
AND (309) 46
OR (310) 47
LOGICNOT (311) 45


Nonterminals, with rules where they appear

$accept (57)
    on left: 0
stmt (58)
    on left: 1, on right: 0
STATEMENT (59)
    on left: 2 3 4 5 6 7 8 9 10 11 12, on right: 1 14 26 33 40 41 51
PACK (60)
    on left: 13, on right: 2
PACKSELF (61)
    on left: 14 15, on right: 13
PACKEN (62)
    on left: 16 17, on right: 13
CLAS (63)
    on left: 18, on right: 3
CLASMIDLE (64)
    on left: 19 20 21 22, on right: 18
CLASEN (65)
    on left: 23 24 25, on right: 18
CLASSELF (66)
    on left: 26 27, on right: 18
FNC (67)
    on left: 28, on right: 4
FNCSTA (68)
    on left: 29 30, on right: 28
PARALIST (69)
    on left: 31 32, on right: 28
FNCSELF (70)
    on left: 33 34, on right: 28
FNCEN (71)
    on left: 35 36 37, on right: 28
IMPOR (72)
    on left: 38, on right: 5
PRIVAT (73)
    on left: 39, on right: 6
LOD (74)
    on left: 40, on right: 7
LODSYN (75)
    on left: 41, on right: 8
SEE_PUT_EXPR (76)
    on left: 42, on right: 9
SEE_PUT (77)
    on left: 43 44, on right: 42
EXPR (78)
    on left: 45, on right: 42 51
AND_OR (79)
    on left: 46 47, on right: 45
GIVE_GET_IDENTIFIER (80)
    on left: 48, on right: 10
GIVE_GET (81)
    on left: 49 50, on right: 48
IF_STAT (82)
    on left: 51, on right: 11
IF_MIDLE (83)
    on left: 52 53, on right: 51
IF_EN (84)
    on left: 54 55 56, on right: 51


State 0

    0 $accept: . stmt $end

    PACKAGE     shift, and go to state 1
    PRIVATE     shift, and go to state 2
    IF          shift, and go to state 3
    GET         shift, and go to state 4
    GIVE        shift, and go to state 5
    LOAD        shift, and go to state 6
    LOADSYNTAX  shift, and go to state 7
    IMPORT      shift, and go to state 8
    DEF         shift, and go to state 9
    FUNC        shift, and go to state 10
    CLASS       shift, and go to state 11
    SEE         shift, and go to state 12
    PUT         shift, and go to state 13

    $default  reduce using rule 12 (STATEMENT)

    stmt                 go to state 14
    STATEMENT            go to state 15
    PACK                 go to state 16
    CLAS                 go to state 17
    FNC                  go to state 18
    FNCSTA               go to state 19
    IMPOR                go to state 20
    PRIVAT               go to state 21
    LOD                  go to state 22
    LODSYN               go to state 23
    SEE_PUT_EXPR         go to state 24
    SEE_PUT              go to state 25
    GIVE_GET_IDENTIFIER  go to state 26
    GIVE_GET             go to state 27
    IF_STAT              go to state 28


State 1

   13 PACK: PACKAGE . IDENTIFIER DOT IDENTIFIER PACKSELF PACKEN

    IDENTIFIER  shift, and go to state 29


State 2

   39 PRIVAT: PRIVATE .

    $default  reduce using rule 39 (PRIVAT)


State 3

   51 IF_STAT: IF . EXPR LBR STATEMENT IF_MIDLE EXPR STATEMENT ELSE STATEMENT IF_EN

    LOGICNOT  shift, and go to state 30

    EXPR  go to state 31


State 4

   50 GIVE_GET: GET .

    $default  reduce using rule 50 (GIVE_GET)


State 5

   49 GIVE_GET: GIVE .

    $default  reduce using rule 49 (GIVE_GET)


State 6

   40 LOD: LOAD . PACKAGE LITERAL STATEMENT

    PACKAGE  shift, and go to state 32


State 7

   41 LODSYN: LOADSYNTAX . LITERAL STATEMENT

    LITERAL  shift, and go to state 33


State 8

   38 IMPOR: IMPORT . IDENTIFIER DOT IDENTIFIER

    IDENTIFIER  shift, and go to state 34


State 9

   30 FNCSTA: DEF .

    $default  reduce using rule 30 (FNCSTA)


State 10

   29 FNCSTA: FUNC .

    $default  reduce using rule 29 (FNCSTA)


State 11

   18 CLAS: CLASS . IDENTIFIER CLASMIDLE IDENTIFIER CLASSELF CLASEN

    IDENTIFIER  shift, and go to state 35


State 12

   43 SEE_PUT: SEE .

    $default  reduce using rule 43 (SEE_PUT)


State 13

   44 SEE_PUT: PUT .

    $default  reduce using rule 44 (SEE_PUT)


State 14

    0 $accept: stmt . $end

    $end  shift, and go to state 36


State 15

    1 stmt: STATEMENT . DOLLAR

    DOLLAR  shift, and go to state 37


State 16

    2 STATEMENT: PACK .

    $default  reduce using rule 2 (STATEMENT)


State 17

    3 STATEMENT: CLAS .

    $default  reduce using rule 3 (STATEMENT)


State 18

    4 STATEMENT: FNC .

    $default  reduce using rule 4 (STATEMENT)


State 19

   28 FNC: FNCSTA . IDENTIFIER PARALIST FNCSELF FNCEN

    IDENTIFIER  shift, and go to state 38


State 20

    5 STATEMENT: IMPOR .

    $default  reduce using rule 5 (STATEMENT)


State 21

    6 STATEMENT: PRIVAT .

    $default  reduce using rule 6 (STATEMENT)


State 22

    7 STATEMENT: LOD .

    $default  reduce using rule 7 (STATEMENT)


State 23

    8 STATEMENT: LODSYN .

    $default  reduce using rule 8 (STATEMENT)


State 24

    9 STATEMENT: SEE_PUT_EXPR .

    $default  reduce using rule 9 (STATEMENT)


State 25

   42 SEE_PUT_EXPR: SEE_PUT . EXPR

    LOGICNOT  shift, and go to state 30

    EXPR  go to state 39


State 26

   10 STATEMENT: GIVE_GET_IDENTIFIER .

    $default  reduce using rule 10 (STATEMENT)


State 27

   48 GIVE_GET_IDENTIFIER: GIVE_GET . IDENTIFIER

    IDENTIFIER  shift, and go to state 40


State 28

   11 STATEMENT: IF_STAT .

    $default  reduce using rule 11 (STATEMENT)


State 29

   13 PACK: PACKAGE IDENTIFIER . DOT IDENTIFIER PACKSELF PACKEN

    DOT  shift, and go to state 41


State 30

   45 EXPR: LOGICNOT . AND_OR LOGICNOT

    AND  shift, and go to state 42
    OR   shift, and go to state 43

    AND_OR  go to state 44


State 31

   51 IF_STAT: IF EXPR . LBR STATEMENT IF_MIDLE EXPR STATEMENT ELSE STATEMENT IF_EN

    LBR  shift, and go to state 45


State 32

   40 LOD: LOAD PACKAGE . LITERAL STATEMENT

    LITERAL  shift, and go to state 46


State 33

   41 LODSYN: LOADSYNTAX LITERAL . STATEMENT

    PACKAGE     shift, and go to state 1
    PRIVATE     shift, and go to state 2
    IF          shift, and go to state 3
    GET         shift, and go to state 4
    GIVE        shift, and go to state 5
    LOAD        shift, and go to state 6
    LOADSYNTAX  shift, and go to state 7
    IMPORT      shift, and go to state 8
    DEF         shift, and go to state 9
    FUNC        shift, and go to state 10
    CLASS       shift, and go to state 11
    SEE         shift, and go to state 12
    PUT         shift, and go to state 13

    $default  reduce using rule 12 (STATEMENT)

    STATEMENT            go to state 47
    PACK                 go to state 16
    CLAS                 go to state 17
    FNC                  go to state 18
    FNCSTA               go to state 19
    IMPOR                go to state 20
    PRIVAT               go to state 21
    LOD                  go to state 22
    LODSYN               go to state 23
    SEE_PUT_EXPR         go to state 24
    SEE_PUT              go to state 25
    GIVE_GET_IDENTIFIER  go to state 26
    GIVE_GET             go to state 27
    IF_STAT              go to state 28


State 34

   38 IMPOR: IMPORT IDENTIFIER . DOT IDENTIFIER

    DOT  shift, and go to state 48


State 35

   18 CLAS: CLASS IDENTIFIER . CLASMIDLE IDENTIFIER CLASSELF CLASEN

    COLON  shift, and go to state 49
    FROM   shift, and go to state 50
    LT     shift, and go to state 51

    $default  reduce using rule 22 (CLASMIDLE)

    CLASMIDLE  go to state 52


State 36

    0 $accept: stmt $end .

    $default  accept


State 37

    1 stmt: STATEMENT DOLLAR .

    $default  reduce using rule 1 (stmt)


State 38

   28 FNC: FNCSTA IDENTIFIER . PARALIST FNCSELF FNCEN

    LR  shift, and go to state 53

    $default  reduce using rule 32 (PARALIST)

    PARALIST  go to state 54


State 39

   42 SEE_PUT_EXPR: SEE_PUT EXPR .

    $default  reduce using rule 42 (SEE_PUT_EXPR)


State 40

   48 GIVE_GET_IDENTIFIER: GIVE_GET IDENTIFIER .

    $default  reduce using rule 48 (GIVE_GET_IDENTIFIER)


State 41

   13 PACK: PACKAGE IDENTIFIER DOT . IDENTIFIER PACKSELF PACKEN

    IDENTIFIER  shift, and go to state 55


State 42

   46 AND_OR: AND .

    $default  reduce using rule 46 (AND_OR)


State 43

   47 AND_OR: OR .

    $default  reduce using rule 47 (AND_OR)


State 44

   45 EXPR: LOGICNOT AND_OR . LOGICNOT

    LOGICNOT  shift, and go to state 56


State 45

   51 IF_STAT: IF EXPR LBR . STATEMENT IF_MIDLE EXPR STATEMENT ELSE STATEMENT IF_EN

    PACKAGE     shift, and go to state 1
    PRIVATE     shift, and go to state 2
    IF          shift, and go to state 3
    GET         shift, and go to state 4
    GIVE        shift, and go to state 5
    LOAD        shift, and go to state 6
    LOADSYNTAX  shift, and go to state 7
    IMPORT      shift, and go to state 8
    DEF         shift, and go to state 9
    FUNC        shift, and go to state 10
    CLASS       shift, and go to state 11
    SEE         shift, and go to state 12
    PUT         shift, and go to state 13

    $default  reduce using rule 12 (STATEMENT)

    STATEMENT            go to state 57
    PACK                 go to state 16
    CLAS                 go to state 17
    FNC                  go to state 18
    FNCSTA               go to state 19
    IMPOR                go to state 20
    PRIVAT               go to state 21
    LOD                  go to state 22
    LODSYN               go to state 23
    SEE_PUT_EXPR         go to state 24
    SEE_PUT              go to state 25
    GIVE_GET_IDENTIFIER  go to state 26
    GIVE_GET             go to state 27
    IF_STAT              go to state 28


State 46

   40 LOD: LOAD PACKAGE LITERAL . STATEMENT

    PACKAGE     shift, and go to state 1
    PRIVATE     shift, and go to state 2
    IF          shift, and go to state 3
    GET         shift, and go to state 4
    GIVE        shift, and go to state 5
    LOAD        shift, and go to state 6
    LOADSYNTAX  shift, and go to state 7
    IMPORT      shift, and go to state 8
    DEF         shift, and go to state 9
    FUNC        shift, and go to state 10
    CLASS       shift, and go to state 11
    SEE         shift, and go to state 12
    PUT         shift, and go to state 13

    $default  reduce using rule 12 (STATEMENT)

    STATEMENT            go to state 58
    PACK                 go to state 16
    CLAS                 go to state 17
    FNC                  go to state 18
    FNCSTA               go to state 19
    IMPOR                go to state 20
    PRIVAT               go to state 21
    LOD                  go to state 22
    LODSYN               go to state 23
    SEE_PUT_EXPR         go to state 24
    SEE_PUT              go to state 25
    GIVE_GET_IDENTIFIER  go to state 26
    GIVE_GET             go to state 27
    IF_STAT              go to state 28


State 47

   41 LODSYN: LOADSYNTAX LITERAL STATEMENT .

    $default  reduce using rule 41 (LODSYN)


State 48

   38 IMPOR: IMPORT IDENTIFIER DOT . IDENTIFIER

    IDENTIFIER  shift, and go to state 59


State 49

   20 CLASMIDLE: COLON .

    $default  reduce using rule 20 (CLASMIDLE)


State 50

   19 CLASMIDLE: FROM .

    $default  reduce using rule 19 (CLASMIDLE)


State 51

   21 CLASMIDLE: LT .

    $default  reduce using rule 21 (CLASMIDLE)


State 52

   18 CLAS: CLASS IDENTIFIER CLASMIDLE . IDENTIFIER CLASSELF CLASEN

    IDENTIFIER  shift, and go to state 60


State 53

   31 PARALIST: LR . IDENTIFIER COMMA IDENTIFIER RR

    IDENTIFIER  shift, and go to state 61


State 54

   28 FNC: FNCSTA IDENTIFIER PARALIST . FNCSELF FNCEN

    LBR  shift, and go to state 62

    $default  reduce using rule 34 (FNCSELF)

    FNCSELF  go to state 63


State 55

   13 PACK: PACKAGE IDENTIFIER DOT IDENTIFIER . PACKSELF PACKEN

    LBR  shift, and go to state 64

    $default  reduce using rule 15 (PACKSELF)

    PACKSELF  go to state 65


State 56

   45 EXPR: LOGICNOT AND_OR LOGICNOT .

    $default  reduce using rule 45 (EXPR)


State 57

   51 IF_STAT: IF EXPR LBR STATEMENT . IF_MIDLE EXPR STATEMENT ELSE STATEMENT IF_EN

    BUT     shift, and go to state 66
    ELSEIF  shift, and go to state 67

    IF_MIDLE  go to state 68


State 58

   40 LOD: LOAD PACKAGE LITERAL STATEMENT .

    $default  reduce using rule 40 (LOD)


State 59

   38 IMPOR: IMPORT IDENTIFIER DOT IDENTIFIER .

    $default  reduce using rule 38 (IMPOR)


State 60

   18 CLAS: CLASS IDENTIFIER CLASMIDLE IDENTIFIER . CLASSELF CLASEN

    LBR  shift, and go to state 69

    $default  reduce using rule 27 (CLASSELF)

    CLASSELF  go to state 70


State 61

   31 PARALIST: LR IDENTIFIER . COMMA IDENTIFIER RR

    COMMA  shift, and go to state 71


State 62

   33 FNCSELF: LBR . STATEMENT RBR

    PACKAGE     shift, and go to state 1
    PRIVATE     shift, and go to state 2
    IF          shift, and go to state 3
    GET         shift, and go to state 4
    GIVE        shift, and go to state 5
    LOAD        shift, and go to state 6
    LOADSYNTAX  shift, and go to state 7
    IMPORT      shift, and go to state 8
    DEF         shift, and go to state 9
    FUNC        shift, and go to state 10
    CLASS       shift, and go to state 11
    SEE         shift, and go to state 12
    PUT         shift, and go to state 13

    $default  reduce using rule 12 (STATEMENT)

    STATEMENT            go to state 72
    PACK                 go to state 16
    CLAS                 go to state 17
    FNC                  go to state 18
    FNCSTA               go to state 19
    IMPOR                go to state 20
    PRIVAT               go to state 21
    LOD                  go to state 22
    LODSYN               go to state 23
    SEE_PUT_EXPR         go to state 24
    SEE_PUT              go to state 25
    GIVE_GET_IDENTIFIER  go to state 26
    GIVE_GET             go to state 27
    IF_STAT              go to state 28


State 63

   28 FNC: FNCSTA IDENTIFIER PARALIST FNCSELF . FNCEN

    END      shift, and go to state 73
    ENDFUNC  shift, and go to state 74

    END       [reduce using rule 37 (FNCEN)]
    $default  reduce using rule 37 (FNCEN)

    FNCEN  go to state 75


State 64

   14 PACKSELF: LBR . STATEMENT RBR

    PACKAGE     shift, and go to state 1
    PRIVATE     shift, and go to state 2
    IF          shift, and go to state 3
    GET         shift, and go to state 4
    GIVE        shift, and go to state 5
    LOAD        shift, and go to state 6
    LOADSYNTAX  shift, and go to state 7
    IMPORT      shift, and go to state 8
    DEF         shift, and go to state 9
    FUNC        shift, and go to state 10
    CLASS       shift, and go to state 11
    SEE         shift, and go to state 12
    PUT         shift, and go to state 13

    $default  reduce using rule 12 (STATEMENT)

    STATEMENT            go to state 76
    PACK                 go to state 16
    CLAS                 go to state 17
    FNC                  go to state 18
    FNCSTA               go to state 19
    IMPOR                go to state 20
    PRIVAT               go to state 21
    LOD                  go to state 22
    LODSYN               go to state 23
    SEE_PUT_EXPR         go to state 24
    SEE_PUT              go to state 25
    GIVE_GET_IDENTIFIER  go to state 26
    GIVE_GET             go to state 27
    IF_STAT              go to state 28


State 65

   13 PACK: PACKAGE IDENTIFIER DOT IDENTIFIER PACKSELF . PACKEN

    ENDPACKAGE  shift, and go to state 77
    END         shift, and go to state 78

    PACKEN  go to state 79


State 66

   52 IF_MIDLE: BUT .

    $default  reduce using rule 52 (IF_MIDLE)


State 67

   53 IF_MIDLE: ELSEIF .

    $default  reduce using rule 53 (IF_MIDLE)


State 68

   51 IF_STAT: IF EXPR LBR STATEMENT IF_MIDLE . EXPR STATEMENT ELSE STATEMENT IF_EN

    LOGICNOT  shift, and go to state 30

    EXPR  go to state 80


State 69

   26 CLASSELF: LBR . STATEMENT RBR

    PACKAGE     shift, and go to state 1
    PRIVATE     shift, and go to state 2
    IF          shift, and go to state 3
    GET         shift, and go to state 4
    GIVE        shift, and go to state 5
    LOAD        shift, and go to state 6
    LOADSYNTAX  shift, and go to state 7
    IMPORT      shift, and go to state 8
    DEF         shift, and go to state 9
    FUNC        shift, and go to state 10
    CLASS       shift, and go to state 11
    SEE         shift, and go to state 12
    PUT         shift, and go to state 13

    $default  reduce using rule 12 (STATEMENT)

    STATEMENT            go to state 81
    PACK                 go to state 16
    CLAS                 go to state 17
    FNC                  go to state 18
    FNCSTA               go to state 19
    IMPOR                go to state 20
    PRIVAT               go to state 21
    LOD                  go to state 22
    LODSYN               go to state 23
    SEE_PUT_EXPR         go to state 24
    SEE_PUT              go to state 25
    GIVE_GET_IDENTIFIER  go to state 26
    GIVE_GET             go to state 27
    IF_STAT              go to state 28


State 70

   18 CLAS: CLASS IDENTIFIER CLASMIDLE IDENTIFIER CLASSELF . CLASEN

    END       shift, and go to state 82
    ENDCLASS  shift, and go to state 83

    END       [reduce using rule 25 (CLASEN)]
    $default  reduce using rule 25 (CLASEN)

    CLASEN  go to state 84


State 71

   31 PARALIST: LR IDENTIFIER COMMA . IDENTIFIER RR

    IDENTIFIER  shift, and go to state 85


State 72

   33 FNCSELF: LBR STATEMENT . RBR

    RBR  shift, and go to state 86


State 73

   35 FNCEN: END .

    $default  reduce using rule 35 (FNCEN)


State 74

   36 FNCEN: ENDFUNC .

    $default  reduce using rule 36 (FNCEN)


State 75

   28 FNC: FNCSTA IDENTIFIER PARALIST FNCSELF FNCEN .

    $default  reduce using rule 28 (FNC)


State 76

   14 PACKSELF: LBR STATEMENT . RBR

    RBR  shift, and go to state 87


State 77

   17 PACKEN: ENDPACKAGE .

    $default  reduce using rule 17 (PACKEN)


State 78

   16 PACKEN: END .

    $default  reduce using rule 16 (PACKEN)


State 79

   13 PACK: PACKAGE IDENTIFIER DOT IDENTIFIER PACKSELF PACKEN .

    $default  reduce using rule 13 (PACK)


State 80

   51 IF_STAT: IF EXPR LBR STATEMENT IF_MIDLE EXPR . STATEMENT ELSE STATEMENT IF_EN

    PACKAGE     shift, and go to state 1
    PRIVATE     shift, and go to state 2
    IF          shift, and go to state 3
    GET         shift, and go to state 4
    GIVE        shift, and go to state 5
    LOAD        shift, and go to state 6
    LOADSYNTAX  shift, and go to state 7
    IMPORT      shift, and go to state 8
    DEF         shift, and go to state 9
    FUNC        shift, and go to state 10
    CLASS       shift, and go to state 11
    SEE         shift, and go to state 12
    PUT         shift, and go to state 13

    $default  reduce using rule 12 (STATEMENT)

    STATEMENT            go to state 88
    PACK                 go to state 16
    CLAS                 go to state 17
    FNC                  go to state 18
    FNCSTA               go to state 19
    IMPOR                go to state 20
    PRIVAT               go to state 21
    LOD                  go to state 22
    LODSYN               go to state 23
    SEE_PUT_EXPR         go to state 24
    SEE_PUT              go to state 25
    GIVE_GET_IDENTIFIER  go to state 26
    GIVE_GET             go to state 27
    IF_STAT              go to state 28


State 81

   26 CLASSELF: LBR STATEMENT . RBR

    RBR  shift, and go to state 89


State 82

   23 CLASEN: END .

    $default  reduce using rule 23 (CLASEN)


State 83

   24 CLASEN: ENDCLASS .

    $default  reduce using rule 24 (CLASEN)


State 84

   18 CLAS: CLASS IDENTIFIER CLASMIDLE IDENTIFIER CLASSELF CLASEN .

    $default  reduce using rule 18 (CLAS)


State 85

   31 PARALIST: LR IDENTIFIER COMMA IDENTIFIER . RR

    RR  shift, and go to state 90


State 86

   33 FNCSELF: LBR STATEMENT RBR .

    $default  reduce using rule 33 (FNCSELF)


State 87

   14 PACKSELF: LBR STATEMENT RBR .

    $default  reduce using rule 14 (PACKSELF)


State 88

   51 IF_STAT: IF EXPR LBR STATEMENT IF_MIDLE EXPR STATEMENT . ELSE STATEMENT IF_EN

    ELSE  shift, and go to state 91


State 89

   26 CLASSELF: LBR STATEMENT RBR .

    $default  reduce using rule 26 (CLASSELF)


State 90

   31 PARALIST: LR IDENTIFIER COMMA IDENTIFIER RR .

    $default  reduce using rule 31 (PARALIST)


State 91

   51 IF_STAT: IF EXPR LBR STATEMENT IF_MIDLE EXPR STATEMENT ELSE . STATEMENT IF_EN

    PACKAGE     shift, and go to state 1
    PRIVATE     shift, and go to state 2
    IF          shift, and go to state 3
    GET         shift, and go to state 4
    GIVE        shift, and go to state 5
    LOAD        shift, and go to state 6
    LOADSYNTAX  shift, and go to state 7
    IMPORT      shift, and go to state 8
    DEF         shift, and go to state 9
    FUNC        shift, and go to state 10
    CLASS       shift, and go to state 11
    SEE         shift, and go to state 12
    PUT         shift, and go to state 13

    $default  reduce using rule 12 (STATEMENT)

    STATEMENT            go to state 92
    PACK                 go to state 16
    CLAS                 go to state 17
    FNC                  go to state 18
    FNCSTA               go to state 19
    IMPOR                go to state 20
    PRIVAT               go to state 21
    LOD                  go to state 22
    LODSYN               go to state 23
    SEE_PUT_EXPR         go to state 24
    SEE_PUT              go to state 25
    GIVE_GET_IDENTIFIER  go to state 26
    GIVE_GET             go to state 27
    IF_STAT              go to state 28


State 92

   51 IF_STAT: IF EXPR LBR STATEMENT IF_MIDLE EXPR STATEMENT ELSE STATEMENT . IF_EN

    RBR  shift, and go to state 93
    END  shift, and go to state 94
    OK   shift, and go to state 95

    IF_EN  go to state 96


State 93

   56 IF_EN: RBR .

    $default  reduce using rule 56 (IF_EN)


State 94

   55 IF_EN: END .

    $default  reduce using rule 55 (IF_EN)


State 95

   54 IF_EN: OK .

    $default  reduce using rule 54 (IF_EN)


State 96

   51 IF_STAT: IF EXPR LBR STATEMENT IF_MIDLE EXPR STATEMENT ELSE STATEMENT IF_EN .

    $default  reduce using rule 51 (IF_STAT)
